exports[`ClearAll has a disabled mode 1`] = `
<button
  className="ais-ClearAll__root"
  disabled={true}>
  Clear all filters
</button>
`;

exports[`ClearAll renders a clickable button 1`] = `
<button
  className="ais-ClearAll__root"
  onClick={[Function]}>
  Clear all filters
</button>
`;
